- Sieve: Fixed "Mark as read" sieve rule.
- Sieve: Added new out of office tab in the email settings dialog.

09-02-2015 6.1.19
- Brazilian language Saturday is UTF-8 encoded
- Comments: Changed order column of comments from ID to Ctime
- Email: Added properties button to the email client which will give the user direct access to the account settings window.
- Files folders were always created for projects
- project template create error
- Login bug on windows servers
- UTF-8 conversion is done for ActiveDirectory LDAP servers
- LDAP_OPT_REFERRALS is set to 0 by default for LDAP connections
- Leaveday module manager may change the YearCredit and approve registered leave days
- Active Directory auth fix: LDAP_OPT_REFERRALS is default set to 0

26-01-2015 6.1.18
- Autocomplete failing after moving email composer fixed
- Search with utf8 characters in address book was broken
- Fixed font-style display in some emails

23-01-2015 6.1.17
- Export timeregistration error fixed
- Include ID's in columns for export
- Fixed SMIME decryption of outlook messages
- Fixed IE bug with colorfield in company dialog
- Support repeat on workdays of thunderbird in caldav
- Fixed caldav bug related to case sensitity in the UID database fields
- Document templates failed with special characters in the name on some servers.
- Merge events in calendar was broken
- Ignore unsupported reminder values in icalendar
- Delete task bug in community version
- Uninstall of module did not work completely. Some installed checks still returned true.
- Wrong parent ID in z-push mail folders which prevented sub/sub/sub folders from syncing 

19-01-2015 6.1.16
- Resources not showing

19-01-2015 6.1.15
- $config['calendar_tasklist_show'] option is merge from 6.0
- $config['debug_usernames'] for turning on debug mode for specific users.
- Replace recurring series completely with caldav to avoid problems of buggy clients
- Repeating event with caldav that started on 0:00 hours repeated on wrong weekday